--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -5,7 +5,7 @@
    "id": "8a85e1f9",
    "metadata": {},
    "source": [
-    "** ASSIGNMENT 1 **"
+    "** ASSIGNMENT - 1  Solution **"
    ]
   },
   {
@@ -19,41 +19,29 @@
     "If a key changes, Python won’t be able to find the value again.\n",
     "\n",
     "Immutable means: value that cannot be changed (like int, str, tuple).\n",
-    "Example is given below :"
+    "\n",
+    "** Example **"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bcced3d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " # Correct example\n",
-    "d = {1: \"Apple\", 2: \"Banana\"}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "42bb2117",
+   "id": "dcf0aa20",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Wrong example\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m d = {[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m]: \u001b[33m\"\u001b[39m\u001b[33mApple\u001b[39m\u001b[33m\"\u001b[39m}   \u001b[38;5;66;03m# list is mutable → error\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: unhashable type: 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
      ]
     }
    ],
    "source": [
-    "# Wrong example\n",
-    "d = {[1, 2]: \"Apple\"}   # list is mutable → error\n"
+    "## Program \n",
+    "d = {(1, 2): \"Hello\"}   # tuple is immutable\n",
+    "\n",
+    "print(d[(1, 2)])\n"
    ]
   },
   {
@@ -98,58 +86,96 @@
    "id": "1697e4ca",
    "metadata": {},
    "source": [
-    " Q 3 What is the difference between dict.get[key] and dict[key]? Write a code example where get() is safer.\n",
+    " Q 3 What is the difference between dict.get(key) and dict[key]? Write a code example where get() is safer.\n",
     "\n",
     " Ans - \n",
-    "    dict[key]:- Gives error if key is not present\n",
+    "      \n",
+    "    dict[key]:-\n",
     "\n",
-    "    dict.get(key):- \n",
-    "       * Returns None or default value.\n",
-    "       * No Error"
+    "       * Directly accesses the value\n",
+    "       * Throws an error if the key does not exist\n",
+    "\n",
+    "   **dict.get(key)**:-\n",
+    "   \n",
+    "      * Safely accesses the value\n",
+    "      * Returns None if key does not exist (or a default value)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fb6dfc55",
+   "cell_type": "markdown",
+   "id": "4f6f18fc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'b'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m d = {\u001b[33m\"\u001b[39m\u001b[33ma\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m10\u001b[39m}\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)   \u001b[38;5;66;03m# KeyError\u001b[39;00m\n",
-      "\u001b[31mKeyError\u001b[39m: 'b'"
-     ]
-    }
-   ],
    "source": [
-    "d = {\"a\": 10}\n",
-    "print(d[\"b\"])   # KeyError\n"
+    "**Code example where get( ) is safer**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "15bbbaf3",
+   "execution_count": 1,
+   "id": "fb6dfc55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
       "0\n"
      ]
     }
    ],
    "source": [
-    "d = {\"a\": 10}\n",
-    "print(d.get(\"b\"))        # None\n",
-    "print(d.get(\"b\", 0))     # 0\n"
+    "\n",
+    "marks = {\"Math\": 85, \"English\": 90}\n",
+    "\n",
+    "print(marks.get(\"Science\", 0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcab4955",
+   "metadata": {},
+   "source": [
+    "No error, program runs safely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45ef374",
+   "metadata": {},
+   "source": [
+    "**Using dict[key] (unsafe)**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e938acc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Science'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m marks = {\u001b[33m\"\u001b[39m\u001b[33mMath\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m85\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mEnglish\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m90\u001b[39m}\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmarks\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mScience\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Science'"
+     ]
+    }
+   ],
+   "source": [
+    "marks = {\"Math\": 85, \"English\": 90}\n",
+    "\n",
+    "print(marks[\"Science\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ca9875",
+   "metadata": {},
+   "source": [
+    "Program crashes because \"Science\" key does not exist."
    ]
   },
   {
@@ -200,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a150b1c6",
    "metadata": {},
    "outputs": [
@@ -208,6 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cubes of odd numbers :-\n",
       "{1: 1, 3: 27, 5: 125}\n"
      ]
     }
@@ -216,6 +243,8 @@
     "## Program:-\n",
     "numbers = [1, 2, 3, 4, 5]\n",
     "cube_dict = {x: x**3 for x in numbers if x % 2 != 0}\n",
+    "\n",
+    "print(\"Cubes of odd numbers :-\")\n",
     "print(cube_dict)\n"
    ]
   }
